# CodeZ

./: .clinerules  .gitignore  AGENTS.md  CONTEXT_DISTILLER_SCOUT_PLAN.md  Cargo.toml  README.md  SWARM_ARCHITECTURE_PLAN.md  electron.vite.config.ts  fix_agent_runner.js  implementation_plan.md  implementation_plan2.md  package-lock.json  package.json  task.md  test-output.txt  tmp_old_chat.tsx  tsconfig.json  unqualified_code_report.md  updateMessageInState.ts  vite.tauri.config.ts  vitest.config.ts
crates/codez-contracts/: Cargo.toml
crates/codez-contracts/bindings/: AttachmentPreviewBytes.ts  ComposerImageAttachment.ts  DraftImageAttachment.ts  GitSnapshotResult.ts  SessionImageAttachment.ts  WorktreeInfo.ts
crates/codez-contracts/examples/: export_bindings.rs
crates/codez-contracts/src/: agent.rs  chat.rs  context.rs  lib.rs  mcp.rs  migration.rs  permission.rs  provider.rs  subagent.rs  task.rs  todo.rs
crates/codez-core/: Cargo.toml
crates/codez-core/src/: agent.rs  app_paths.rs  attachment.rs  context.rs  error.rs  git.rs  host.rs  identifiers.rs  lib.rs  persistence.rs  ports.rs  provider.rs  redaction.rs  system.rs  workspace.rs  workspace_path.rs
crates/codez-mcp/: Cargo.toml
crates/codez-mcp/src/: client.rs  config.rs  error.rs  gateway.rs  lib.rs  oauth.rs  secret.rs
crates/codez-mcp/src/transports/: http.rs  mod.rs  sse.rs  stdio.rs
crates/codez-mcp/tests/: gateway_integration.rs  rmcp_sdk_spike.rs
crates/codez-mcp/tests/fixtures/: mcp-legacy-sse-server.cjs  mcp-oauth-server.cjs  mcp-stdio-failure.cjs  mcp-stdio-server.cjs
crates/codez-platform/: Cargo.toml
crates/codez-platform/examples/: shell_parser_spike.rs
crates/codez-platform/src/: executable.rs  filesystem.rs  lib.rs  process.rs  pty.rs  resources.rs  system.rs
crates/codez-platform/tests/: portable_pty_spike.rs
crates/codez-providers/: Cargo.toml
crates/codez-providers/src/: lib.rs  service.rs
crates/codez-providers/src/chat/: anthropic.rs  common.rs  gemini.rs  mod.rs  openai.rs
crates/codez-providers/tests/fixtures/: provider-protocol-golden.json
crates/codez-runtime/: Cargo.toml
crates/codez-runtime/src/: attachment.rs  cancellation.rs  edit_transaction.rs  fingerprint.rs  git.rs  history_revert.rs  host.rs  lib.rs  mutation_coordinator.rs  observability.rs  project_analysis.rs  search.rs  session_deletion.rs  session_maintenance.rs  system.rs  task.rs  todo.rs  workspace.rs
crates/codez-runtime/src/agent/: artifact_store.rs  budget.rs  collaboration.rs  executor.rs  loop_impl.rs  mailbox.rs  mod.rs  persistence.rs  registry.rs  scheduler.rs  state.rs  store.rs  supervisor.rs  task_dag.rs  workspace_broker.rs
crates/codez-runtime/src/agent/parallel/: mod.rs  orchestrator.rs  worktree.rs
crates/codez-runtime/src/agent/sub_agent/: mailbox.rs  manager.rs  mod.rs  resolver.rs  types.rs
crates/codez-runtime/src/chat/: mod.rs  stream_state.rs
crates/codez-runtime/src/chat/prompt/: builder.rs  mod.rs  pipeline.rs  types.rs
crates/codez-runtime/src/chat/prompt/modules/: agent_runtime.rs  available_tools.rs  (+18 more)
crates/codez-runtime/src/context/: budget.rs  builder.rs  compaction.rs  file_restorer.rs  ledger.rs  mod.rs  normalizer.rs  provider_adapter.rs  pruner.rs  skill_restorer.rs  skill_state.rs  state_machine.rs
crates/codez-runtime/src/edit_transaction/: history_revert_workspace.rs
crates/codez-runtime/src/extension/: mod.rs  rules.rs  skills.rs
crates/codez-runtime/src/permission/: ai_classifier.rs  audit.rs  contract.rs  decision.rs  mod.rs  service.rs  store.rs
crates/codez-runtime/src/permission/shell/: effects.rs  expander.rs  guard.rs  impact.rs  mod.rs  parser.rs  policies.rs  types.rs
crates/codez-runtime/src/tools/: assembler.rs  authorization.rs  exposure.rs  journal.rs  large_result.rs  mod.rs  pipeline.rs  processor.rs  registry.rs  scheduler.rs  spawn.rs  types.rs  validation.rs
crates/codez-runtime/src/tools/builtin/: agent.rs  bash.rs  edit.rs  file_mutation.rs  glob.rs  grep.rs  list_files.rs  mod.rs  notebook_edit.rs  path.rs  powershell.rs  read.rs  search_support.rs  shell_workspace.rs  task.rs  todo.rs  tool_result_read.rs  tool_search.rs  write.rs
crates/codez-runtime/tests/: agent_runtime_tests.rs  edit_transaction_tests.rs  fingerprint_tests.rs  mutation_coordinator_tests.rs  tools_tests.rs
crates/codez-runtime/tests/support/: mod.rs
crates/codez-storage/: Cargo.toml
crates/codez-storage/examples/: windows_safe_storage_probe.rs
crates/codez-storage/src/: atomic_file.rs  lib.rs  schema.rs
crates/codez-storage/src/credentials/: keyring_store.rs  mod.rs
crates/codez-storage/src/migration/: activation.rs  catalog.rs  coordinator.rs  credential_tests.rs  credentials.rs  filesystem.rs  layout.rs  legacy_safe_storage.rs  mod.rs  tests.rs  transform.rs  transform_tests.rs
crates/codez-storage/src/repositories/: mod.rs  recent_projects.rs  sessions.rs
crates/codez-storage/tests/: os_credential_store_smoke.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_boundary.rs  agent_runtime.rs  agent_tool_runtime.rs  agent_ui_runtime.rs  attachment_boundary.rs  chat_compaction.rs  chat_interaction.rs  chat_runtime.rs  chat_tool_runtime.rs  child_agent_runtime.rs  composition.rs  context_boundary.rs  error.rs  git_boundary.rs  lib.rs  lifecycle.rs  logging.rs  main.rs  mcp_boundary.rs  mcp_interaction.rs  mcp_runtime.rs  migration_boundary.rs  notification_tool_runtime.rs  permission_ai_classifier.rs  provider_boundary.rs  provider_boundary_tests.rs  session_deletion.rs  skill_document.rs  skill_tool_runtime.rs  state.rs  subagent_boundary.rs  subagent_runtime.rs  web_tool_runtime.rs
src-tauri/src/commands/: agent.rs  attachment.rs  chat.rs  context.rs  external_skills.rs  git.rs  host.rs  mcp.rs  migration.rs  mod.rs  path_security.rs  permission.rs  provider.rs  renderer_log.rs  rules.rs  settings.rs  skills.rs  subagent.rs  system.rs  task.rs  terminal.rs  theme.rs  todo.rs  workspace.rs
src-tauri/tests/: tauri_stream_spike.rs
(+1336 files in other folders)
