[workspace]
members = [
  "crates/codez-contracts",
  "crates/codez-core",
  "crates/codez-mcp",
  "crates/codez-platform",
  "crates/codez-providers",
  "crates/codez-runtime",
  "crates/codez-storage",
  "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "UNLICENSED"

[workspace.dependencies]
codez-contracts = { path = "crates/codez-contracts" }
codez-core = { path = "crates/codez-core" }
codez-platform = { path = "crates/codez-platform" }
codez-runtime = { path = "crates/codez-runtime" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
ts-rs = { version = "12.0.1", features = ["serde-compat"] }

[workspace.lints.rust]
unsafe_code = "forbid"
