[workspace]
members = [
  "crates/codez-contracts",
  "crates/codez-core",
  "crates/codez-mcp",
  "crates/codez-platform",
  "crates/codez-providers",
  "crates/codez-runtime",
  "crates/codez-storage",
  "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "UNLICENSED"

[workspace.dependencies]
codez-contracts = { path = "crates/codez-contracts" }
codez-core = { path = "crates/codez-core" }
codez-platform = { path = "crates/codez-platform" }
codez-runtime = { path = "crates/codez-runtime" }
codez-storage = { path = "crates/codez-storage" }
aes = { version = "0.8.4", features = ["zeroize"] }
aes-gcm = { version = "0.10.3", features = ["zeroize"] }
base64 = "0.22.1"
keyring = { version = "3.6.3", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.12.2"
sha2 = "0.10.9"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }
ts-rs = { version = "12.0.1", features = ["serde-compat"] }
zeroize = "1.8.2"
windows-dpapi = "0.2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
