[workspace]
members = [
  "crates/codez-contracts",
  "crates/codez-core",
  "crates/codez-mcp",
  "crates/codez-platform",
  "crates/codez-providers",
  "crates/codez-runtime",
  "crates/codez-storage",
  "src-tauri",
]
exclude = ["vendor/portable-pty-0.9.0"]
resolver = "2"

[patch.crates-io]
portable-pty = { path = "vendor/portable-pty-0.9.0" }

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "UNLICENSED"

[workspace.dependencies]
codez-contracts = { path = "crates/codez-contracts" }
codez-core = { path = "crates/codez-core" }
codez-mcp = { path = "crates/codez-mcp" }
codez-platform = { path = "crates/codez-platform" }
codez-providers = { path = "crates/codez-providers" }
codez-runtime = { path = "crates/codez-runtime" }
codez-storage = { path = "crates/codez-storage" }
aes = { version = "0.8.4", features = ["zeroize"] }
aes-gcm = { version = "0.10.3", features = ["zeroize"] }
base64 = "0.22.1"
dunce = "1.0.5"
globset = "0.4.16"
keyring = { version = "3.6.3", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
regex = "1.12.2"
reqwest = { version = "0.12.12", features = ["json", "stream", "rustls-tls", "gzip", "brotli", "deflate", "charset"], default-features = false }
rustix = { version = "1.1.4", features = ["fs"] }
eventsource-stream = "0.2.3"
file-id = { version = "0.2.3", features = ["serde"] }
futures-util = "0.3.30"
same-file = "1.0.6"
sha2 = "0.10.9"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt", "sync", "time", "fs", "process", "io-util"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
ts-rs = { version = "12.0.1", features = ["serde-compat"] }
uuid = { version = "1.23.5", features = ["v4"] }
zeroize = "1.8.2"
windows-dpapi = "0.2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.test]
debug = 1
