[package]
name = "codez-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
ts-rs.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]

[lints]
workspace = true
