[package]
name = "codez-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
codez-core.workspace = true
http = "1.3.1"
process-wrap = { version = "=9.1.0", features = ["tokio1"] }
regex.workspace = true
rmcp = { version = "=2.2.0", default-features = false, features = [
  "auth",
  "client",
  "elicitation",
  "reqwest",
  "transport-child-process",
  "transport-streamable-http-client-reqwest",
] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url = "2.5.8"
zeroize.workspace = true

[dev-dependencies]
async-trait = "0.1.89"
rmcp = { version = "=2.2.0", default-features = false, features = ["server"] }
reqwest_013 = { package = "reqwest", version = "0.13.4", default-features = false, features = ["rustls"] }
serde_json.workspace = true
tokio = { version = "1.49.0", features = [
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }

[lints]
workspace = true
