[package]
name = "codez-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
codez-core.workspace = true
futures-util.workspace = true
http = "1.3.1"
oauth2 = "5.0.0"
process-wrap = { version = "=9.1.0", features = ["tokio1"] }
reqwest_013 = { package = "reqwest", version = "0.13.4", default-features = false, features = ["form", "json", "stream", "rustls"] }
regex.workspace = true
rmcp = { version = "=2.2.0", default-features = false, features = [
  "auth",
  "client",
  "elicitation",
  "reqwest",
  "transport-child-process",
  "transport-streamable-http-client-reqwest",
] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sse-stream = "=0.2.4"
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url = "2.5.8"
zeroize.workspace = true

[dev-dependencies]
rmcp = { version = "=2.2.0", default-features = false, features = ["server"] }
serde_json.workspace = true
tokio = { version = "1.49.0", features = [
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }

[lints]
workspace = true
