[package]
name = "codez-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
codez-core.workspace = true
same-file.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
portable-pty = "=0.9.0"
serde.workspace = true
serde_json.workspace = true
tree-sitter = "=0.25.10"
tree-sitter-bash = "=0.25.0"
tree-sitter-powershell = "=0.25.10"

[lints]
workspace = true
