[package]
name = "codez-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
codez-core.workspace = true
dunce.workspace = true
same-file.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
portable-pty = "=0.9.0"
dashmap = "6.2.1"
futures-util.workspace = true
process-wrap = { version = "=9.1.0", features = ["tokio1"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Threading"] }
win32job = "=2.0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["process", "signal"] }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
tree-sitter = "=0.25.10"
tree-sitter-bash = "=0.25.0"
tree-sitter-powershell = "=0.25.10"

[lints]
workspace = true
