[package]
name = "codez-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
codez-core.workspace = true
codez-contracts.workspace = true
codez-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
futures-util.workspace = true
async-stream = "0.3.5"
tokio.workspace = true
tokio-util.workspace = true
async-trait = "0.1.83"
uuid = { workspace = true, features = ["v4", "v7"] }
chrono = "0.4"
zeroize.workspace = true

[lints]
workspace = true
