[package]
name = "codez-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["serde"] }
codez-core.workspace = true
dashmap = "6.0"
dunce.workspace = true
futures = "0.3.32"
file-id.workspace = true
globset.workspace = true
hex = "0.4.3"
image = "0.25"
jsonschema = "0.47.0"
lazy_static = "1.5.0"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tempfile.workspace = true
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
