[package]
name = "codez-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
codez-core.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
zeroize.workspace = true

[target.'cfg(windows)'.dependencies]
aes.workspace = true
aes-gcm.workspace = true
base64.workspace = true
keyring = { workspace = true, features = ["windows-native"] }
windows-dpapi.workspace = true
winsafe = { version = "0.0.24", features = ["kernel"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["async-secret-service", "async-io", "crypto-rust"] }

[lints]
workspace = true
